Updatte index.html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <a lang="en" href="">WebStudio</a>
             <ul>
                 <li>
-                    <a href="">Студия</a>
+                    <a href="#studio">Студия</a>
                 </li>
                 <li>
-                    <a href="">Портфолио</a>
+                    <a href="#portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="#contacts">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -56,7 +56,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="studio">
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -70,7 +70,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="portfolio">
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -98,7 +98,7 @@
     </main>
     <footer>
         <a lang="en" href="">WebStudio</a>
-        <address>
+        <address id="contacts">
             <ul>
                 <li>
                     <a href="https://goo.gl/maps/GVKszzcCuVBAkBWa6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
